<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="defaultSnackBarOnClick"
        android:text="@string/defaultSnackBarOnClick"
        android:textAllCaps="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="stylesSnackBarOnClick"
        android:text="@string/stylesSnackBarOnClick"
        android:textAllCaps="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="customSnackBarOnClick"
        android:text="@string/customSnackBarOnClick"
        android:textAllCaps="false" />
</LinearLayout>